--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -26,6 +26,7 @@
                     <li class = "list-item"> About </li>
                     <li class = "list-item"> Support </li>
                     <li class = "list-item"> Community </li>
+                    <li class = "list-item"> Git </li>
                 </ul>
             
             </div>
