--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style = "font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">
     <head>
         {% load static %}
         
@@ -21,25 +21,32 @@
         
             <div id = "menu">
                 
-                <ul>
-                    <li class = "list-item"> Home </li>
-                    <li class = "list-item"> About </li>
-                    <li class = "list-item"> Support </li>
-<<<<<<< HEAD
-                    <li class = "list-item"> Community </li>
-                    <li class = "list-item"> Git </li>
-=======
-                    
->>>>>>> mainpage
-                </ul>
+                <h1 class = "page-head">Data sheet</h1>
             
             </div>
-            <div id = "home-content" class = "text1">
+            <div class = "home-content">
                 
-                
+                <input class = "search-input" type = "text">
+                                
             
             </div>
-            
+            <div class = "home-content">
+                <div style = "display:inline-block;width:90%;">
+                <table class = "search-table">
+                    <tr>
+                        <td>
+                            code
+                        </td>
+                        <td>
+                            descr
+                        </td>
+                        <td>
+                            loc
+                        </td>
+                    </tr>
+                </table>
+                </div>
+            </div>
         
         </div>
     
