--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -52,3 +52,38 @@
     color:grey;
     
 }
+
+.page-head{
+    color:white;
+}
+
+.search-input{
+    background-color:white;
+    color:black;
+    border:solid 1px grey;
+    border-radius:5px;
+    padding:5px;
+    width:70%;
+    font-size:25px;
+    opacity:0.7;
+}
+
+.home-content{
+    text-align:center;
+    margin-top:30px;
+}
+
+.search-table{
+    background-color:white;
+    color:black;
+    border:solid 1px grey;
+    border-radius:5px;
+    width:100%;
+    font-size:25px;
+    opacity:0.7;
+    border:solid 1px black;
+    border-collapse:collapse;
+}
+td{
+    border:solid 1px black;
+}
