--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -73,7 +73,7 @@
     margin-top:30px;
 }
 
-.search-table{
+#search-table{
     background-color:white;
     color:black;
     border:solid 1px grey;
