--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -26,13 +26,13 @@
             </div>
             <div class = "home-content">
                 
-                <input class = "search-input" type = "text">
+                <input id = "key" class = "search-input" type = "text">
                                 
             
             </div>
             <div class = "home-content">
                 <div style = "display:inline-block;width:90%;">
-                <table class = "search-table">
+                <table id = "search-table">
                     <tr>
                         <td>
                             code
@@ -52,6 +52,112 @@
     
     </body>
 
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script type="text/javascript">
+ $(document).ready( function() {
+    
+    
+    $('#key').on( "keyup", function() {      
+        console.log("got key up");
+        
+        var ref = $('#key').val();
+        
+        var sref = 1;
+        
+        
+        $.get("http://94.10.26.6:5120/getres2/" + ref + "/" + sref).done(function (data) {
+            
+            var obj = data  
+            
+            
+            var tbl=$("<table/>").attr("id","mytable");
+            $(tbl).css("padding", "20px");
 
+            $("#search-table tr").remove(); 
+              
+                var tr2="<tr class ='trs'>";
+            
+                var th1="<td>"+ "Code" +"</td>";
+                var th2="<td>"+ "Supplier" +"</td>";
+                var th3="<td>"+ "Description" +"</td>";
+               
+                var th5="<td>"+ "Pick" +"</td>";
+                var th6="<td>"+ "Bulk" +"</td>";
+                var th7="<td>"+ "Shelf" +"</td></tr>";
+                
+                $("#search-table").append(tr2 + th1 + th2 + th3 + th5 + th6 + th7); 
+           
+            
+             for(i in obj)
+            {
+                var tr = "<tr class ='trs' name = "+ obj[i].unid +">";
+                var test = obj[i].name1;
+                
+                
+                var td1="<td>" +obj[i].code + "</td>";
+                
+                var td2="<td>"+obj[i].supplier+"</td>";
+                var td3="<td>"+test+ "<br>" + obj[i].mesures + "</td>";
+                
+                var td5="<td class = 'lpickb'> <p class = 'lpickbp'>"+obj[i].pick+ "</p><input class = 'lpickc' type = 'text' value = '" + obj[i].pick + "'></input>" + "</td>";
+                
+                
+                
+                var td6="<td>"+obj[i].bulk+"</td>";
+                var td7="<td>"+obj[i].shelf+"</td></tr>";
+        
+               $("#search-table").append(tr + td1 + td2 + td3 + td5 + td6 + td7); 
+        
+            }
+            
+            var my_table = document.getElementById("search-table");
+            var td = my_table.getElementsByTagName("td"); 
+            var trs = my_table.getElementsByTagName("tr"); 
+            var tblen = my_table.rows.length - 1;
+            
+            $(td).css("padding", "5px");
+            $(td).css("font-size", fsize);
+            
+            $(".lpickb").click(function(){
+                $(".lpickc").css("display", "none");
+                var input = $(this).find("input");
+                $(input).css("display", "block");
+                var parent = $(this).parent()
+                
+                                   
+                
+                
+            }); 
+            $(function () {
+    
+                $('.lpickc').focusout('click', function() {
+                    var value = $(this).val();
+                    
+                    $(this).hide();
+                    
+                    var parent = $(this).parent();
+                    var child = $(parent).find("p");
+                    $(child).text(value);
+                    
+                    
+                    var superParent = parent.parent();
+                    var unid = superParent.attr("name");
+                    console.log(unid + " " + value);
+                    
+                    $.get("/fastsearchLoc/" + unid + "/" + value).done(function (data) {
+                    
+                        console.log("Done");
+                    
+                    });
+                    
+                    
+                });
+            }); 
+       });
+    });
+});
+
+</script>
 
 </html>
