--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -73,17 +73,11 @@
     margin-top:30px;
 }
 
-#search-table{
-    background-color:white;
-    color:black;
-    border:solid 1px grey;
-    border-radius:5px;
-    width:100%;
-    font-size:25px;
-    opacity:0.7;
-    border:solid 1px black;
-    border-collapse:collapse;
-}
+
 td{
     border:solid 1px black;
+    width:100px;
+    height:100px;
+    background-color:white;
+    opacity:0.8;
 }
