--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -30,89 +30,109 @@
                 <table id = "table">
 
                     <tr><!--L-->
-                        <td>46L</td>
-                        <td>44L</td>
-                        <td>42L</td>
-                        <td>40L</td>
-                        <td>38L</td>
-                        <td>36L</td>
-                        <td>34L</td>
-                        <td>32L</td>
-                        <td>30L</td>
-                        <td>28L</td>
-                        <td>26L</td>
+                        <td class = "table-data">46L</td>
+                        <td class = "table-data">44L</td>
+                        <td class = "table-data">42L</td>
+                        <td class = "table-data">40L</td>
+                        <td class = "table-data">38L</td>
+                        <td class = "table-data">36L</td>
+                        <td class = "table-data">34L</td>
+                        <td class = "table-data">32L</td>
+                        <td class = "table-data">30L</td>
+                        <td class = "table-data">28L</td>
+                        <td class = "table-data">26L</td>
                     </tr>
 
                     <tr><!--K-->
-                        <td>46K</td>
-                        <td>44K</td>
-                        <td>42K</td>
-                        <td>40K</td>
-                        <td>38K</td>
-                        <td>36K</td>
-                        <td>34K</td>
-                        <td>32K</td>
-                        <td>30K</td>
-                        <td>28K</td>
-                        <td>26K</td>
+                        <td class = "table-data">46K</td>
+                        <td class = "table-data">44K</td>
+                        <td class = "table-data">42K</td>
+                        <td class = "table-data">40K</td>
+                        <td class = "table-data">38K</td>
+                        <td class = "table-data">36K</td>
+                        <td class = "table-data">34K</td>
+                        <td class = "table-data">32K</td>
+                        <td class = "table-data">30K</td>
+                        <td class = "table-data">28K</td>
+                        <td class = "table-data">26K</td>
                     </tr>
                     <tr><!--J-->
-                        <td>46J</td>
-                        <td>44J</td>
-                        <td>42J</td>
-                        <td>40J</td>
-                        <td>38J</td>
-                        <td>36J</td>
-                        <td>34J</td>
-                        <td>32J</td>
-                        <td>30J</td>
-                        <td>28J</td>
-                        <td>26J</td>
+                        <td class = "table-data">46J</td>
+                        <td class = "table-data">44J</td>
+                        <td class = "table-data">42J</td>
+                        <td class = "table-data">40J</td>
+                        <td class = "table-data">38J</td>
+                        <td class = "table-data">36J</td>
+                        <td class = "table-data">34J</td>
+                        <td class = "table-data">32J</td>
+                        <td class = "table-data">30J</td>
+                        <td class = "table-data">28J</td>
+                        <td class = "table-data">26J</td>
                     </tr>
                     <tr><!--H-->
-                        <td>46H</td>
-                        <td>44H</td>
-                        <td>42H</td>
-                        <td>40H</td>
-                        <td>38H</td>
-                        <td>36H</td>
-                        <td>34H</td>
-                        <td>32H</td>
-                        <td>30H</td>
-                        <td>28H</td>
-                        <td>26H</td>
+                        <td class = "table-data">46H</td>
+                        <td class = "table-data">44H</td>
+                        <td class = "table-data">42H</td>
+                        <td class = "table-data">40H</td>
+                        <td class = "table-data">38H</td>
+                        <td class = "table-data">36H</td>
+                        <td class = "table-data">34H</td>
+                        <td class = "table-data">32H</td>
+                        <td class = "table-data">30H</td>
+                        <td class = "table-data">28H</td>
+                        <td class = "table-data">26H</td>
                     </tr>
                     <tr><!--G-->
-                        <td>46G</td>
-                        <td>44G</td>
-                        <td>42G</td>
-                        <td>40G</td>
-                        <td>38G</td>
-                        <td>36G</td>
-                        <td>34G</td>
-                        <td>32G</td>
-                        <td>30G</td>
-                        <td>28G</td>
-                        <td>26G</td>
+                        <td class = "table-data">46G</td>
+                        <td class = "table-data">44G</td>
+                        <td class = "table-data">42G</td>
+                        <td class = "table-data">40G</td>
+                        <td class = "table-data">38G</td>
+                        <td class = "table-data">36G</td>
+                        <td class = "table-data">34G</td>
+                        <td class = "table-data">32G</td>
+                        <td class = "table-data">30G</td>
+                        <td class = "table-data">28G</td>
+                        <td class = "table-data">26G</td>
                     </tr>
                     <tr><!--F-->
-                        <td>46F</td>
-                        <td>44F</td>
-                        <td>42F</td>
-                        <td>40F</td>
-                        <td>38F</td>
-                        <td>36F</td>
-                        <td>34F</td>
-                        <td>32F</td>
-                        <td>30F</td>
-                        <td>28F</td>
-                        <td>26F</td>
+                        <td class = "table-data">46F</td>
+                        <td class = "table-data">44F</td>
+                        <td class = "table-data">42F</td>
+                        <td class = "table-data">40F</td>
+                        <td class = "table-data">38F</td>
+                        <td class = "table-data">36F</td>
+                        <td class = "table-data">34F</td>
+                        <td class = "table-data">32F</td>
+                        <td class = "table-data">30F</td>
+                        <td class = "table-data">28F</td>
+                        <td class = "table-data">26F</td>
                     </tr>
 
                 </table>
 
             </div>
-
+            <div id = "mod-cell">
+                <table>
+                    <tr>
+                        <td><p>Location: </p></td>
+                        <td><p id = "loc">...</p></td>
+                    </tr>
+                    <tr>
+                        <td><p>Pick Location: </p></td>
+                        <td><p id = "picloc">...</p></td>
+                    </tr>
+                    <tr>
+                        <td><p>Product:</p>
+                        <td><p id = "product">...</p></td>
+                    </tr>
+                    <tr>
+                        <td><p id = "x">x</p></td>
+                        <td><p id = "y">y</p></td>
+                    </tr>
+                </table>
+            </div>
+            <div id = "overlay"></div>
 
         
         </div>
@@ -126,7 +146,7 @@
 
 items = [
     {% for i in data %}
-    {item: "{{ i.product }}" + "<br>" + "{{ i.loc }}" + "<br>" + "{{ i.pickloc }}", x: "{{ i.xpos }}", y: "{{i.ypos}}"},  
+    {item: "{{ i.product }}" + "<br>" + "{{ i.loc }}" + "<br>" +"<p class = 'hid'>" + "{{ i.pickloc }}" + "</p>", x: "{{ i.xpos }}", y: "{{i.ypos}}"},  
     {% endfor %}    
 ];
 
@@ -141,8 +161,24 @@ items.forEach(({item, x, y}) => {
 
 });
 $(document).ready( function() {
-    var x = document.getElementById("table").rows[2].cells;
-    x[3].innerHTML = "NEW CONTENT";
+    
+
+    $(".table-data").hover( function() {
+        $(this).find("p").css("display", "inline");
+        
+    }, function(){
+        $(this).find("p").css("display", "none");
+
+    });
+    $(".table-data").mouseup( function(){
+        var row = $(this).closest("tr").index();
+        var cell = $(this).index();
+        console.log(cell + " " + row);
+        $("#overlay").css("display","inline");
+        $("#mod-cell").css("display", "inline");
+        $("#x").text(cell);
+        $("#y").text(row);
+    });
 });
 </script>
 
