--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -79,5 +79,45 @@ td{
     width:100px;
     height:100px;
     background-color:white;
+    opacity:1.0;
+    border-radius:10px;
+}
+
+.table-data:hover{
+    width:150px;
+    height:150px;
+    position: absolute;
+    opacity:1.0;
+    margin-right:100px;
+    
+}
+
+.hid {
+    display:none;
+}
+#table{
+    width:100%;
+}
+
+#mod-cell{
+    background-color:white;
+    border-radius:10px;
+    padding:10px;
+    position:fixed;
+    top:5%;
+    width:90%;
+    left:5%;
+    display:none;
+    z-index: 99;
+
+}
+#overlay{
+    background-color:black;
+    position:fixed;
+    width:100%;
+    height:100vh;
     opacity:0.8;
+    top:0px;
+    left:0px;
+    display:none;
 }
