--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -210,7 +210,7 @@ items = [
     {% for i in data %}
     {item: "<h4 style = 'text-align:center;padding:0;margin:0;'>" + '{{i.loc}}' + "/2" + "</h4>" 
 
-    + "<table class = 'inner-table'> <tr>" 
+    + "<table1 class = 'inner-table'> <tr>" 
     + "<td class = 'inner-data1'><h4 class = 'product-name'>" + "{{ i.value1 }}" + "</h4>" + "</td>"
     + "<td class = 'inner-data2'><h4 class = 'product-name'>" + "{{ i.value2 }}" + "</h4>" + "</td>"
     + "</table>"
